some tuned to follow current co3k.org url layout

--- a/content/Blog/10.rst
+++ b/content/Blog/10.rst
@@ -3,7 +3,7 @@ XHProf 導入メモ
 ===============
 
 :date: 2010-10-10 11:50:38
-:slug: blog-10
+:slug: 10
 
 ここ数ヶ月、 OpenPNE 3 を使ったサービスのパフォーマンスチューニングにかなりの時間を割いていました。
 
