--- a/content/Blog/12.rst
+++ b/content/Blog/12.rst
@@ -3,7 +3,7 @@ CakePHP の PHP コード実行の脆弱性を使って CakePHP を焦がす
 ==========================================================
 
 :date: 2010-11-17 12:13:12
-:slug: blog-12
+:slug: 12
 
 2010/11/13 に出たらしい http://bakery.cakephp.org/articles/markstory/2010/11/13/cakephp_1_3_6_and_1_2_9_released を読んでびっくりしたんですが、 Twitter を軽く検索した限りだと CakePHP ユーザでない僕が気づいているのに (日本の) CakePHP ユーザさんたちがどうも気づいていないっぽいのでわかりやすくまとめてみることにしました！　CakePHP には任意の PHP コードが実行できる致命的な脆弱性があります！　影響のあるサイト結構ありそうですが悪用厳禁です！
 
