--- a/content/Blog/13.rst
+++ b/content/Blog/13.rst
@@ -3,7 +3,7 @@ VersionControl_Git 0.4.4 をリリースしました
 ===========================================
 
 :date: 2011-03-05 20:27:22
-:slug: blog-13
+:slug: 13
 
 お待たせしました、 VersionControl_Git の新しい安定版をリリースしました。
 
