--- a/content/Blog/14.rst
+++ b/content/Blog/14.rst
@@ -3,7 +3,7 @@
 =======================================================================================
 
 :date: 2011-03-23 17:18:28
-:slug: blog-14
+:slug: 14
 
 本日、秀和システム様より『symfony 1.4によるWebアプリケーション開発』が発売されました！
 
