--- a/content/Blog/15.rst
+++ b/content/Blog/15.rst
@@ -3,7 +3,7 @@ Doctrine 2 のエンティティで Essence Pattern を使ってみた
 ========================================================
 
 :date: 2011-09-04 20:03:33
-:slug: blog-15
+:slug: 15
 
 Essence Pattern とは
 ====================
