--- a/content/Blog/16.rst
+++ b/content/Blog/16.rst
@@ -3,7 +3,7 @@
 ==========================================================
 
 :date: 2011-09-15 23:50:12
-:slug: blog-16
+:slug: 16
 
 僕は今年に入ってからたまたま発見したセキュリティ脆弱性を積極的に報告するようにしはじめました。当然、検証の際には法を遵守するよう心がけていますし、他にも、検証の過程で誤って被害を与えてしまうことがないように、たとえば SQL Injection 脆弱性の発見は避けるなどの自分ルールを決めて、素人なりに細々とやっています。
 
