--- a/content/Blog/18.rst
+++ b/content/Blog/18.rst
@@ -3,7 +3,7 @@
 ==================================================================================
 
 :date: 2011-10-26 18:45:35
-:slug: blog-18
+:slug: 18
 
 仕事で「フレームワークで使ってる CSRF 対策用トークンがセッション ID を基にいろいろ組み合わせた文字列のハッシュなんだけれども、なんでセッション ID 直接使わないんだよう」的な話が出たので、なんでだろうなーと考えつつ理由について検討してみたので以下に一部晒してみます（社内向けに書いたものなのでいろいろ雑だったりするのはごめんね）::
 
