--- a/content/Blog/19.rst
+++ b/content/Blog/19.rst
@@ -3,7 +3,7 @@ au の F001 に存在した EZ 番号詐称の脆弱性について
 =================================================
 
 :date: 2011-11-29 10:56:05
-:slug: blog-19
+:slug: 19
 
 このエントリでは、海老原が 11/11 に発見した、「F001 の PC サイトビューアを利用して EZ 番号の作業がおこなえる」という脆弱性について説明します。
 
