--- a/content/Blog/20.rst
+++ b/content/Blog/20.rst
@@ -3,7 +3,7 @@
 =============================================================
 
 :date: 2011-12-06 13:18:42
-:slug: blog-20
+:slug: 20
 
 結論から言うと、 au 端末の EZ ブラウザで cookie が使えなくなって困ったりした経験をお持ちの方とか、そのあたりの情報を知っている方とかいらっしゃいませんか？　という話です。
 
