--- a/content/Blog/22.rst
+++ b/content/Blog/22.rst
@@ -3,7 +3,7 @@ Symfony2 の力を借りたセキュア開発 (Symfony Advent Calender 2011 JP -
 ============================================================================
 
 :date: 2011-12-18 00:29:06
-:slug: blog-22
+:slug: 22
 
 Symfony Advent Calender 2011 JP 18日目です。前回は `@hidenorigoto <https://twitter.com/#!/hidenorigoto>`_ さんでした。リダイレクト・インターセプションは 2.0.0 が出る前のどこかのタイミングでデフォルトでオフになって焦った記憶があります。投稿処理などをしたタイミングでプロファイラを見る機会が多いので、有効にしておくと便利ですよね。
 
