--- a/content/Blog/25.rst
+++ b/content/Blog/25.rst
@@ -3,7 +3,7 @@
 =========================================================================================
 
 :date: 2012-02-15 05:01:16
-:slug: blog-25
+:slug: 25
 
 .. NOTE::
     2012/02/16 11:36
