--- a/content/Blog/26.rst
+++ b/content/Blog/26.rst
@@ -3,7 +3,7 @@
 ======================================================================================
 
 :date: 2012-02-28 09:36:59
-:slug: blog-26
+:slug: 26
 
 2012/02/15、 JVN から `JVN#35256978: cforms II におけるクロスサイトスクリプティングの脆弱性 <http://jvn.jp/jp/JVN35256978/>`_ が公開されました。これはクレジットされているとおり、海老原と、同僚の渡辺優也君が勤務中に発見した脆弱性です。
 
