--- a/content/Blog/27.rst
+++ b/content/Blog/27.rst
@@ -3,7 +3,7 @@ Erlang 製 Web サーバ Yaws に Digest 認証を追加してみた
 ======================================================
 
 :date: 2012-03-13 02:24:58
-:slug: blog-27
+:slug: 27
 
 `Erlang <http://www.erlang.org/>`_ で作りたい Web アプリがあって、認証について色々仕様を詰めてた（「特権ユーザにのみ特定の操作を許可したいな」、「アカウント情報の盗聴やリプレイ攻撃は防ぎたいな」、「でも非 SSL 通信を想定したいな」）ところ、「それ Digest 認証でできるよ」という声が頭のなかで聞こえたので `Yaws <http://yaws.hyber.org/>`_ に実装されてたりしないかなーと探してみたらなかった！　Basic 認証しかなかった！　ので実装してみました！　という話です。
 
