--- a/content/Blog/29.rst
+++ b/content/Blog/29.rst
@@ -3,7 +3,7 @@ OpenPNE 3 プラグイン opHardeningPlugin 1.0.0 をリリースした
 ===========================================================
 
 :date: 2013-04-22 00:19:24
-:slug: blog-29
+:slug: 29
 
 現行の OpenPNE 3 に不足している各種セキュリティ対策をカバーするためのプラグイン、 opHardeningPlugin 1.0.0 をリリースしました。ライセンスは Apache License 2.0 となります。
 
