--- a/content/Blog/30.rst
+++ b/content/Blog/30.rst
@@ -3,7 +3,7 @@ OpenPNE 3 プラグイン opHardeningPlugin 1.0.1 をリリースした
 ===========================================================
 
 :date: 2013-05-19 19:56:31
-:slug: blog-30
+:slug: 30
 
 現行の OpenPNE 3 に不足している各種セキュリティ対策をカバーするためのプラグイン、 opHardeningPlugin 1.0.1 をリリースしました。
 
