--- a/content/Blog/32.rst
+++ b/content/Blog/32.rst
@@ -3,7 +3,7 @@
 ===========================================================================================================
 
 :date: 2013-05-27 12:30:54
-:slug: blog-32
+:slug: 32
 
 iPhone で Yahoo! 知恵袋をブラウジングしていたところ、以下の画像に示したような表示要素が出てくることに気がつきました。
 
