--- a/content/Blog/33.rst
+++ b/content/Blog/33.rst
@@ -3,7 +3,7 @@ PHP 5.3 でネイティブ関数の引数型エラー時の返り値が変更に
 ==========================================================================
 
 :date: 2013-06-24 11:56:27
-:slug: blog-33
+:slug: 33
 
 PHP 5.5.0 リリースおめでとうございます。
 
