--- a/content/Blog/35.rst
+++ b/content/Blog/35.rst
@@ -3,7 +3,7 @@ Django のチュートリアルをやってみるよ (1)
 =========================================
 
 :date: 2013-12-13 06:59:20
-:slug: blog-35
+:slug: 35
 
 Django 自体にはかなり興味があって、コードはちょくちょく拾い読みしていたりとか、 https://docs.djangoproject.com/en/1.6/topics/security/ とか、個人的に認証周りのセキュリティ関連の修正で興味深いものが 2 件ほど出ていたので [1]_, [2]_ そのあたりは追いかけていたのだけれど、実際に Django を使って何か作ってみたことがあるわけではないので、ちょっとチュートリアルをはじめてみたよ。
 
