--- a/content/Blog/37.rst
+++ b/content/Blog/37.rst
@@ -3,7 +3,7 @@ gcc で C のエントリポイントから Go で定義した関数をコール
 =================================================================
 
 :date: 2013-12-16 23:58:33
-:slug: blog-37
+:slug: 37
 
 C 言語のプログラムから Go で書いた関数を呼ぶ的なことをやってみたくていろいろと試行錯誤してたけどようやくうまくいったのでポイントをメモします。
 
