--- a/content/Blog/4.rst
+++ b/content/Blog/4.rst
@@ -3,7 +3,7 @@ Symfony 2 の sandbox を試してみました (web/check.php だけ)
 ==========================================================
 
 :date: 2010-02-18 05:00:36
-:slug: blog-4
+:slug: 4
 
 パリでおこなわれた Symfony Live 2010 にて、 Symfony 2 のプレビューリリース版が 2 月 17 日 19 時頃に GitHub で公開されました（ただし日本時間では 18 日 3 時頃という日本人泣かせな時間。今頃現地の方々は手元で Symfony 2 と戯れているんでしょうね、うらやましいです）。
 http://github.com/symfony/symfony/
