--- a/content/Blog/5.rst
+++ b/content/Blog/5.rst
@@ -3,7 +3,7 @@ LimeChat for Mac を自分用に改造した
 ===================================
 
 :date: 2010-02-20 23:16:42
-:slug: blog-5
+:slug: 5
 
 個人的にはどうしてか 2006 年以来 IRC を使わなくなっていました。
 ところが追っかけている人が ustream でストリーミングをやっていることを知り、そこの IRC チャットが随分と盛り上がっている様子だったので、最近になって IRC の利用を再開しました。
