--- a/content/Blog/6.rst
+++ b/content/Blog/6.rst
@@ -3,7 +3,7 @@
 ==============================================================================================================
 
 :date: 2010-02-25 20:32:18
-:slug: blog-6
+:slug: 6
 
 みんなが社内 LT をやるなか、今日マストの作業をガシガシやっていたのですが、予定より早く作業が片付いたので息抜きに以下のようなスライドを作って発表しました（コードも含めて作成時間 15 分くらい）。
 
