--- a/content/Blog/9.rst
+++ b/content/Blog/9.rst
@@ -3,7 +3,7 @@ secure.softbank.ne.jp について SoftBank に質問したら残念な結果に
 ==========================================================================
 
 :date: 2010-06-15 20:25:07
-:slug: blog-9
+:slug: 9
 
 割と個人的には速報なので簡単にまとめます。
 
