--- a/content/Blog/1.rst
+++ b/content/Blog/1.rst
@@ -3,7 +3,7 @@ OpenPNE3 でサイトリニューアルしてみた
 =====================================
 
 :date: 2009-11-28 19:33:48
-:slug: blog-1
+:slug: 1
 
 OpenPNE3 開発者としてはプライベートでも OpenPNE3 を使いたいのですが、現状新しく SNS を立てている余裕がまるでない……ということで、自分のサイトを OpenPNE3 で作り直しました。何もないですが。
 
