--- a/content/Blog/17.rst
+++ b/content/Blog/17.rst
@@ -3,7 +3,7 @@
 ==================================================
 
 :date: 2011-09-18 04:57:16
-:slug: blog-17
+:slug: 17
 
 ちょっと部屋が凄いことになっているのでこの連休をきっかけに掃除しはじめてます。たぶん連休中には終わりきらないと思うので 1 週間くらい隙を見てちょいちょい片付けたりとかします。
 
