--- a/content/Blog/28.rst
+++ b/content/Blog/28.rst
@@ -3,7 +3,7 @@ Symfony のセキュリティリリースハンドリングがチョベリグに
 ===========================================================================================================
 
 :date: 2012-12-23 12:16:45
-:slug: blog-28
+:slug: 28
 
 `Symfony Advent Calendar 2012 JP <http://www.adventar.org/calendars/24>`_ の 23 日目です。なんか 17 日目で川原君から
 
