--- a/content/Blog/26.rst
+++ b/content/Blog/26.rst
@@ -239,7 +239,7 @@ Secunia などのセキュリティ関連機関が掲載する誤情報
 
 今回の件について、 Secunia は「v11.6 にバージョンアップすれば解決する」との誤情報を流しました。現在は修正されているので、 Google キャッシュのキャプチャ画像を以下に提示します。
 
-.. image:: http://26.media.tumblr.com/tumblr_lzsubwUYSC1qz6qi7o1_500.png
+.. image:: https://78.media.tumblr.com/tumblr_lzsubwUYSC1qz6qi7o1_500.png
    :alt: SA42006 の修正前情報のキャプチャ
    :target: http://ebitan.tumblr.com/post/18070520341/wordpress-cformsii-plugin-rs-and-rsargs-script
 
@@ -252,7 +252,7 @@ Secunia などのセキュリティ関連機関が掲載する誤情報
 
 現に海老原は、この Secunia の情報を見て、 cforms II のバージョンを上げるべきであると判断しました。そのとき、 Bugtraq に行って報告者のアドバイザリ (と exploit) を見たのは偶然でしかなく、危うく修正されていないことを見逃すところでした。
 
-この手の誤情報といえば、先日の日記『 `勝手に訂正: 「PHP における SQL インジェクション攻撃を行われる脆弱性 (JVNDB-2012-001388)」 <http://co3k.org/blog/25>`_ 』で指摘した、 PHP の開発中バージョンと一部のディストリビューションの配布するパッケージでしか存在しなかったバグが、さもリリース済みの各バージョンに存在する問題であるかのように、 CVE を含む複数のサイトが告知した問題が個人的には記憶に新しいです。こちらは脆弱でないバージョンが脆弱扱いされていたというもので、今回の問題とは逆ですね。
+この手の誤情報といえば、先日の日記『 `勝手に訂正: 「PHP における SQL インジェクション攻撃を行われる脆弱性 (JVNDB-2012-001388)」 </blog/25>`_ 』で指摘した、 PHP の開発中バージョンと一部のディストリビューションの配布するパッケージでしか存在しなかったバグが、さもリリース済みの各バージョンに存在する問題であるかのように、 CVE を含む複数のサイトが告知した問題が個人的には記憶に新しいです。こちらは脆弱でないバージョンが脆弱扱いされていたというもので、今回の問題とは逆ですね。
 
 この PHP の一件のように、CVE の時点で間違われるとどうしようもないのですが……ジャストアイディアですが、たとえば、 JVN iPedia などで脆弱性に関する検証レポート (JPCERT/CC によるものでもいいし、有志からのものでもいい) を掲載するというのはどうでしょうか。現状のように JVN で公表された情報の再編だったり、海外の記事の翻訳だったりするだけ (もちろん日本の状況にあわせて内容や CVSS スコアは調整しているでしょうけど) というのも芸がないですし、その種の検証情報が参照しやすい形で示されていれば、情報の価値も高まるし、よいのではないでしょうか。
 
